Allow absolute paths to be used for properties files.

--- a/src/main/resources/hudson/ivy/IvyModuleSet/help-ivySettingsPropertyFiles.html
+++ b/src/main/resources/hudson/ivy/IvyModuleSet/help-ivySettingsPropertyFiles.html
@@ -26,7 +26,7 @@ THE SOFTWARE.
   <p>
   Property files that need to be loaded before parsing the Ivy settings
   file and Ivy module descriptors. Specified as comma-delimited list of
-  relative paths from the workspace root.
+  relative paths from the workspace root or absolute file paths.
   
   <p>
   This only needs to be specified if you use ${property} references in
